sub-contenedor creado

--- a/index.html
+++ b/index.html
@@ -18,22 +18,28 @@
   
 <main class="containerMain">
   <section class="containerSedans">
-    <div>imagen</div>
-    <div>titulo</div>
-    <div>parrafo</div>
-    <div>boton</div>
+    <div class="containerSedans__sub">
+      <div>imagen</div>
+      <div>titulo</div>
+      <div>parrafo</div>
+      <div>boton</div>
+    </div>
   </section>
   <section class="containerSubs">
-    <div>imagen</div>
-    <div>titulo</div>
-    <div>parrafo</div>
-    <div>boton</div>
+    <div class="containerSubs__sub">
+      <div>imagen</div>
+      <div>titulo</div>
+      <div>parrafo</div>
+      <div>boton</div>
+    </div>
   </section>
   <section class="containerLuxury">
-    <div>imagen</div>
-    <div>titulo</div>
-    <div>parrafo</div>
-    <div>boton</div>
+    <div class="containerLuxury__sub">
+      <div>imagen</div>
+      <div>titulo</div>
+      <div>parrafo</div>
+      <div>boton</div>
+    </div>
   </section>
   <section class="containerFooter">
     <div class="attribution">
