--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <main class="containerMain">
   <section class="containerSedans">
     <div class="containerSedans__sub">
-      <div>imagen</div>
+      <div><img src="./images/icon-sedans.svg" alt=""></div>
       <div>titulo</div>
       <div>parrafo</div>
       <div>boton</div>
@@ -27,7 +27,7 @@
   </section>
   <section class="containerSubs">
     <div class="containerSubs__sub">
-      <div>imagen</div>
+      <div><img src="./images/icon-suvs.svg" alt=""></div>
       <div>titulo</div>
       <div>parrafo</div>
       <div>boton</div>
@@ -35,7 +35,7 @@
   </section>
   <section class="containerLuxury">
     <div class="containerLuxury__sub">
-      <div>imagen</div>
+      <div><img src="./images/icon-luxury.svg" alt=""></div>
       <div>titulo</div>
       <div>parrafo</div>
       <div>boton</div>
