estructura interna terminada

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./styles.css">
@@ -10,44 +12,73 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
-  
-<main class="containerMain">
-  <section class="containerSedans">
-    <div class="containerSedans__sub">
-      <div><img src="./images/icon-sedans.svg" alt=""></div>
-      <div>titulo</div>
-      <div>parrafo</div>
-      <div>boton</div>
-    </div>
-  </section>
-  <section class="containerSubs">
-    <div class="containerSubs__sub">
-      <div><img src="./images/icon-suvs.svg" alt=""></div>
-      <div>titulo</div>
-      <div>parrafo</div>
-      <div>boton</div>
-    </div>
-  </section>
-  <section class="containerLuxury">
-    <div class="containerLuxury__sub">
-      <div><img src="./images/icon-luxury.svg" alt=""></div>
-      <div>titulo</div>
-      <div>parrafo</div>
-      <div>boton</div>
-    </div>
-  </section>
-  <section class="containerFooter">
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </div> 
-  </section>
-</main>
-  
+
+  <main class="containerMain">
+    <section class="containerSedans">
+      <div class="containerSedans__sub">
+        <div>
+          <img src="./images/icon-sedans.svg" alt="">
+        </div>
+        <div>
+          <h1>Sedans</h1>
+        </div>
+        <div>
+          <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
+            or on your next road trip.</p>
+        </div>
+        <div><input type="button" value="learn more"></div>
+      </div>
+    </section>
+    <section class="containerSubs">
+      <div class="containerSedans__sub">
+        <div>
+          <img src="./images/icon-sedans.svg" alt="">
+        </div>
+        <div>
+          <h1>Sedans</h1>
+        </div>
+        <div>
+          <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
+            or on your next road trip.</p>
+        </div>
+        <div><input type="button" value="learn more"></div>
+      </div>
+    </section>
+    <section class="containerLuxury">
+      <div class="containerSedans__sub">
+        <div>
+          <img src="./images/icon-sedans.svg" alt="">
+        </div>
+        <div>
+          <h1>Sedans</h1>
+        </div>
+        <div>
+          <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
+            or on your next road trip.</p>
+        </div>
+        <div><input type="button" value="learn more"></div>
+      </div>
+    </section>
+    <section class="containerFooter">
+      <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="#">Your Name Here</a>.
+      </div>
+    </section>
+  </main>
+
 </body>
+
 </html>
