--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./styles.css">
+  
   <title>Frontend Mentor | 3-column preview card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
+  <!-- <style>
     .attribution {
       font-size: 11px;
       text-align: center;
@@ -20,7 +21,7 @@
     .attribution a {
       color: hsl(228, 45%, 44%);
     }
-  </style>
+  </style> -->
 </head>
 
 <body>
@@ -35,8 +36,7 @@
           <h1>Sedans</h1>
         </div>
         <div>
-          <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
-            or on your next road trip.</p>
+          <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in he city or on your next road trip.</p>
         </div>
         <div><input type="button" value="learn more"></div>
       </div>
@@ -44,14 +44,13 @@
     <section class="containerSubs">
       <div class="containerSedans__sub">
         <div>
-          <img src="./images/icon-sedans.svg" alt="">
+          <img src="./images/icon-suvs.svg" alt="">
         </div>
         <div>
-          <h1>Sedans</h1>
+          <h1>SUVs</h1>
         </div>
         <div>
-          <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
-            or on your next road trip.</p>
+          <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
         </div>
         <div><input type="button" value="learn more"></div>
       </div>
@@ -59,14 +58,13 @@
     <section class="containerLuxury">
       <div class="containerSedans__sub">
         <div>
-          <img src="./images/icon-sedans.svg" alt="">
+          <img src="./images/icon-luxury.svg" alt="">
         </div>
         <div>
-          <h1>Sedans</h1>
+          <h1>Luxury</h1>
         </div>
         <div>
-          <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
-            or on your next road trip.</p>
+          <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of luxury rental and arrive in style.</p>
         </div>
         <div><input type="button" value="learn more"></div>
       </div>
