--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
     </section>
     <section class="containerSubs">
-      <div class="containerSedans__sub">
+      <div class="containerSubs__sub">
         <div>
           <img src="./images/icon-suvs.svg" alt="">
         </div>
@@ -56,7 +56,7 @@
       </div>
     </section>
     <section class="containerLuxury">
-      <div class="containerSedans__sub">
+      <div class="containerLuxury__sub">
         <div>
           <img src="./images/icon-luxury.svg" alt="">
         </div>
@@ -72,7 +72,7 @@
     <section class="containerFooter">
       <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="#">Your Name Here</a>.
+        Coded by <a href="#">Francisco Becerra Rodriguez</a>.
       </div>
     </section>
   </main>
