media query desktop finalizado

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <section class="containerFooter">
       <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="#">Francisco Becerra Rodriguez</a>.
+        Coded by <a href="https://github.com/FranciscoFrontEndDeveloper" target="_blank">Francisco Becerra Rodriguez</a>.
       </div>
     </section>
   </main>
