--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./styles.css">
-  
+
   <title>Frontend Mentor | 3-column preview card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -36,7 +36,8 @@
           <h1>Sedans</h1>
         </div>
         <div>
-          <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in he city or on your next road trip.</p>
+          <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in he city or on your
+            next road trip.</p>
         </div>
         <div><input type="button" value="learn more"></div>
       </div>
@@ -50,7 +51,8 @@
           <h1>SUVs</h1>
         </div>
         <div>
-          <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
+          <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and
+            off-road adventures.</p>
         </div>
         <div><input type="button" value="learn more"></div>
       </div>
@@ -64,17 +66,23 @@
           <h1>Luxury</h1>
         </div>
         <div>
-          <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of luxury rental and arrive in style.</p>
+          <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of luxury rental and
+            arrive in style.</p>
         </div>
         <div><input type="button" value="learn more"></div>
       </div>
     </section>
-    <section class="containerFooter">
+
+
+    <div class="containerFooter">
       <div class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="https://github.com/FranciscoFrontEndDeveloper" target="_blank">Francisco Becerra Rodriguez</a>.
+        <h3>
+          Challenge by <a href="https://www.frontendmentor.io/challenges/3column-preview-card-component-pH92eAR2-" target="_blank">Frontend Mentor</a>.
+          Coded by <a href="https://github.com/FranciscoFrontEndDeveloper" target="_blank">francisco becerra rodriguez</a>.
+        </h3>
       </div>
-    </section>
+    </div>
+
   </main>
 
 </body>
